# trabalho_final_visao_comp

./: .gitignore  README.md  autoannotate.py  calibrar_spawns.py  debug_spawn_points.py  main.py  projeto.py  pyproject.toml  test_integration.py  trafego_slave_com_rl.py
copilot/: projeto_com_trafego.py
copilot/rl/: semaforo_env.py  train.py
copilot/rl/logs.1/PPO_Semaforo_0/: events.out.tfevents.1780112150.n002-gpu.2552272.0  events.out.tfevents.1780118948.n002-gpu.2552272.1  events.out.tfevents.1780125788.n002-gpu.2552272.2  events.out.tfevents.1780132955.n002-gpu.2552272.3  events.out.tfevents.1780139905.n002-gpu.2552272.4  events.out.tfevents.1780143958.n002-gpu.2582106.0  events.out.tfevents.1780144230.n002-gpu.2582940.0
rl/: semaforo_env copy.py  semaforo_env.py  train.py
rotulos/: limpeza.py  main.py  viewer.py
