[project]
name = "projeto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autopep8>=2.3.2",
    "carla>=0.9.16",
    "flask>=3.1.3",
    "gymnasium>=1.2.3",
    "jupyter>=1.1.1",
    "kagglehub>=1.0.1",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "stable-baselines3>=2.1.0",
    "tensorboard>=2.20.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=5.9.0",
    "ultralytics>=8.4.52",
]
